feat: forgot password and api security
