# src/authentication/user.dto.ts
@@ -1,0 +1,15 @@
+export interface UserDtoRes {
+    userName: string
+    password: string
+    email: string
+    roles: string[]
+  }
+
+export interface SignInRes {
+    userName: string
+    password: string
+  }
+
+export interface ForgotPasswordDTORes {
+    userName: string
+  }
